--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "sass": "^1.57.1",
     "web-vitals": "^2.1.4"
   },
+  "homepage": ".",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
